Change header and logo color

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<header class="navbar navbar-fixed-top" style="background-color: #012345;">
   <div class="container">
     <%= link_to "Senhri", root_path, id: "logo" %>
     <nav>
