--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
-    <h1 class="display-4">Welcome to Senhri Blog</h1>
-    <p class="lead">This is a ruby on rails social media app built just for you.</p>
+    <h1 class="display-4">Welcome to Senhri</h1>
+    <p class="lead text-center">Senhri is social media app built just for you.</p>
     <hr class="my-4">
     <% if !user_signed_in?%>
         <p>Sign up or Log in to continue</p>
