--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,8 @@
-<div class="jumbotron">
+<div class="jumbotron text-center">
     <h1 class="display-4">Welcome to Senhri</h1>
-    <p class="lead text-center">Senhri is social media app built just for you.</p>
+    <p class="lead">Senhri is social media app built just for you.</p>
     <hr class="my-4">
     <% if !user_signed_in?%>
-        <p>Sign up or Log in to continue</p>
         <p class="lead">
             <a class="btn btn-primary btn-lg" href="/users/sign_up" role="button">Sign Up</a>
             <a class="btn btn-primary btn-lg" href="/users/sign_in" role="button">Log In</a>
