--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,7 @@
         <p class="lead">
             <a class="btn btn-primary btn-lg" href="/users/sign_up" role="button">Sign Up</a>
             <a class="btn btn-primary btn-lg" href="/users/sign_in" role="button">Log In</a>
+            <a class="btn btn-primary btn-lg" href="/users/sign_in", home_guest_sign_in_path, method: :post role="button">Guest Login</a>
         </p>
     <% end %>
 </div>
