--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,8 +5,8 @@
     <% if !user_signed_in?%>
         <p class="lead">
             <a class="btn btn-primary btn-lg" href="/users/sign_up" role="button">Sign Up</a>
-            <a class="btn btn-primary btn-lg" href="/users/sign_in" role="button">Log In</a>
-            <a class="btn btn-primary btn-lg" href="/users/sign_in", home_guest_sign_in_path, method: :post role="button">Guest Login</a>
+            <a class="btn btn-primary btn-lg" href="/users/sign_in" role="button">Log In</a> <br><br>
+            <%= link_to 'Guest Login', users_guest_sign_in_path, method: :post %>
         </p>
     <% end %>
 </div>
