--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,6 +10,9 @@
           <li><%= link_to "Posts", posts_path %></li>
           <li><%= link_to "Friends", "/friends" %></li>
           <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+          <% if current_user.admin? %>
+          <li><%= link_to "Admin Panel", rails_admin_path %></li>
+          <% end %>
           <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
         <% else %>
           <li><%= link_to "Log in", new_user_session_path %></li>
