--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,21 +9,21 @@
         <div class="col-md-6">
           <div class="field">
             <%= f.label :"first Name" %><br />
-            <%= f.text_field :first_name, autofocus: true, class: 'form-control'%>
+            <%= f.text_field :first_name, placeholder: "First Name", autofocus: true, class: 'form-control'%>
           </div>
         </div>
         <div class="col-md-6">
           <div class="field">
             <%= f.label :"last Name" %><br />
-            <%= f.text_field :last_name, class: 'form-control'%>
+            <%= f.text_field :last_name, placeholder: "Last Name", class: 'form-control'%>
           </div>
         </div>
       </div>
 
       <div>
         <%= f.label :gender %><br/>
-        <label class='radio-inline'>Male&nbsp<%= f.radio_button :gender, 'male' %></label>
-        <label class='radio-inline'>Female<%= f.radio_button :gender, 'female' %></label>
+        <label class='radio-inline'>Male&nbsp <%= f.radio_button :gender, 'male' %></label>
+        <label class='radio-inline'>Female <%= f.radio_button :gender, 'female' %></label>
       </div>
       <br/>
 
@@ -34,7 +34,7 @@
 
       <div class="field">
         <%= f.label :email %><br />
-        <%= f.email_field :email, autocomplete: "email", class: 'form-control'%>
+        <%= f.email_field :email, placeholder: "user@example.com", autocomplete: "email", class: 'form-control'%>
       </div>
 
       <div class="field">
@@ -42,12 +42,12 @@
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
-        <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
+        <%= f.password_field :password, placeholder: "Password", autocomplete: "new-password", class: 'form-control' %>
       </div>
 
       <div class="field">
         <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+        <%= f.password_field :password_confirmation, placeholder: "Password Confirmation", autocomplete: "new-password", class: 'form-control' %>
       </div>
 
       <div class="actions">
