--- a/app/views/shared/_new_comment.html.erb
+++ b/app/views/shared/_new_comment.html.erb
@@ -4,7 +4,7 @@
         <%= form_for(@comment) do |f| %>
             <%= render 'shared/error_messages', object: f.object %>
             <%= f.hidden_field :post_id, value: @post_id %>
-            <%= f.text_area :body, class: 'form-control', :cols => "10", :rows => "4" %>
+            <%= f.text_area :body, placeholder: "Comment Here", class: 'form-control', :cols => "10", :rows => "4" %>
             <%= f.submit "Comment", class: "col-md-2 btn btn-info" %>
         <% end %>
     </div>
