--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
     <h1 class="display-4">Welcome to Senhri</h1>
-    <p class="lead">Senhri is social media app built just for you.</p>
+    <p class="lead">Senhri is social media app built just for you.<br>Users can add friends, create posts, comment and interact with each other.</p>
     <hr class="my-4">
     <% if !user_signed_in?%>
         <p class="lead">
